@@ -1,4 +1,4 @@
-/*** Autogenerated by WIDL 1.1.41 from downloadmgr.idl - Do not edit ***/
+/*** Autogenerated by WIDL 1.1.43 from downloadmgr.idl - Do not edit ***/
 
 #include <rpc.h>
 #include <rpcndr.h>
